src/balancemqd/comm/stomp/compiler/STOMPParser.c
/** \file
 *  This C source file was generated by $ANTLR version 3.5
 *
 *     -  From the grammar source file : STOMP.g
 *     -                            On : 2013-01-28 16:07:13
 *     -                for the parser : STOMPParserParser
 *
 * Editing it, at least manually, is not wise.
 *
 * C language generator and runtime by Jim Idle, jimi|hereisanat|idle|dotgoeshere|ws.
 *
 *
*/
// [The "BSD license"]
// Copyright (c) 2005-2009 Jim Idle, Temporal Wave LLC
// http://www.temporal-wave.com
// http://www.linkedin.com/in/jimidle
//
// All rights reserved.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions
// are met:
// 1. Redistributions of source code must retain the above copyright
//    notice, this list of conditions and the following disclaimer.
// 2. Redistributions in binary form must reproduce the above copyright
//    notice, this list of conditions and the following disclaimer in the
//    documentation and/or other materials provided with the distribution.
// 3. The name of the author may not be used to endorse or promote products
//    derived from this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
// IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
// OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
// IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
// INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
// NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
// THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

/* -----------------------------------------
 * Include the ANTLR3 generated header file.
 */
#include    "STOMPParser.h"
/* ----------------------------------------- */





/* MACROS that hide the C interface implementations from the
 * generated code, which makes it a little more understandable to the human eye.
 * I am very much against using C pre-processor macros for function calls and bits
 * of code as you cannot see what is happening when single stepping in debuggers
 * and so on. The exception (in my book at least) is for generated code, where you are
 * not maintaining it, but may wish to read and understand it. If you single step it, you know that input()
 * hides some indirect calls, but is always referring to the input stream. This is
 * probably more readable than ctx->input->istream->input(snarfle0->blarg) and allows me to rejig
 * the runtime interfaces without changing the generated code too often, without
 * confusing the reader of the generated output, who may not wish to know the gory
 * details of the interface inheritance.
 */

#define		CTX	ctx

/* Aids in accessing scopes for grammar programmers
 */
#undef	SCOPE_TYPE
#undef	SCOPE_STACK
#undef	SCOPE_TOP
#define	SCOPE_TYPE(scope)   pSTOMPParser_##scope##_SCOPE
#define SCOPE_STACK(scope)  pSTOMPParser_##scope##Stack
#define	SCOPE_TOP(scope)    ctx->pSTOMPParser_##scope##Top
#define	SCOPE_SIZE(scope)		ctx->pSTOMPParser_##scope##Stack_limit
#define SCOPE_INSTANCE(scope, i)	(ctx->SCOPE_STACK(scope)->get(ctx->SCOPE_STACK(scope),i))

/* Macros for accessing things in the parser
 */

#undef	    PARSER
#undef	    RECOGNIZER
#undef	    HAVEPARSEDRULE
#undef		MEMOIZE
#undef	    INPUT
#undef	    STRSTREAM
#undef	    HASEXCEPTION
#undef	    EXCEPTION
#undef	    MATCHT
#undef	    MATCHANYT
#undef	    FOLLOWSTACK
#undef	    FOLLOWPUSH
#undef	    FOLLOWPOP
#undef	    PRECOVER
#undef	    PREPORTERROR
#undef	    LA
#undef	    LT
#undef	    CONSTRUCTEX
#undef	    CONSUME
#undef	    MARK
#undef	    REWIND
#undef	    REWINDLAST
#undef	    PERRORRECOVERY
#undef	    HASFAILED
#undef	    FAILEDFLAG
#undef	    RECOVERFROMMISMATCHEDSET
#undef	    RECOVERFROMMISMATCHEDELEMENT
#undef		INDEX
#undef      ADAPTOR
#undef		SEEK
#undef	    RULEMEMO
#undef		DBG

#define	    PARSER				ctx->pParser
#define	    RECOGNIZER				PARSER->rec
#define	    PSRSTATE				RECOGNIZER->state
#define	    HAVEPARSEDRULE(r)			RECOGNIZER->alreadyParsedRule(RECOGNIZER, r)
#define	    MEMOIZE(ri,si)			RECOGNIZER->memoize(RECOGNIZER, ri, si)
#define	    INPUT				PARSER->tstream
#define	    STRSTREAM				INPUT
#define	    ISTREAM				INPUT->istream
#define	    INDEX()				ISTREAM->index(INPUT->istream)
#define	    HASEXCEPTION()			(PSRSTATE->error == ANTLR3_TRUE)
#define	    EXCEPTION				PSRSTATE->exception
#define	    MATCHT(t, fs)			RECOGNIZER->match(RECOGNIZER, t, fs)
#define	    MATCHANYT()				RECOGNIZER->matchAny(RECOGNIZER)
#define	    FOLLOWSTACK				PSRSTATE->following
#ifdef  SKIP_FOLLOW_SETS
#define	    FOLLOWPUSH(x)
#define	    FOLLOWPOP()
#else
#define	    FOLLOWPUSH(x)			FOLLOWSTACK->push(FOLLOWSTACK, ((void *)(&(x))), NULL)
#define	    FOLLOWPOP()				FOLLOWSTACK->pop(FOLLOWSTACK)
#endif
#define	    PRECOVER()				RECOGNIZER->recover(RECOGNIZER)
#define	    PREPORTERROR()			RECOGNIZER->reportError(RECOGNIZER)
#define	    LA(n)				INPUT->istream->_LA(ISTREAM, n)
#define	    LT(n)				INPUT->_LT(INPUT, n)
#define	    CONSTRUCTEX()			RECOGNIZER->exConstruct(RECOGNIZER)
#define	    CONSUME()				ISTREAM->consume(ISTREAM)
#define	    MARK()				ISTREAM->mark(ISTREAM)
#define	    REWIND(m)				ISTREAM->rewind(ISTREAM, m)
#define	    REWINDLAST()			ISTREAM->rewindLast(ISTREAM)
#define	    SEEK(n)				ISTREAM->seek(ISTREAM, n)
#define	    PERRORRECOVERY			PSRSTATE->errorRecovery
#define	    FAILEDFLAG				PSRSTATE->failed
#define	    HASFAILED()				(FAILEDFLAG == ANTLR3_TRUE)
#define	    BACKTRACKING			PSRSTATE->backtracking
#define	    RECOVERFROMMISMATCHEDSET(s)		RECOGNIZER->recoverFromMismatchedSet(RECOGNIZER, s)
#define	    RECOVERFROMMISMATCHEDELEMENT(e)	RECOGNIZER->recoverFromMismatchedElement(RECOGNIZER, s)
#define     ADAPTOR                         ctx->adaptor
#define		RULEMEMO						PSRSTATE->ruleMemo
#define		DBG								RECOGNIZER->debugger


#define		TOKTEXT(tok, txt)				tok, (pANTLR3_UINT8)txt

/* The 4 tokens defined below may well clash with your own #defines or token types. If so
 * then for the present you must use different names for your defines as these are hard coded
 * in the code generator. It would be better not to use such names internally, and maybe
 * we can change this in a forthcoming release. I deliberately do not #undef these
 * here as this will at least give you a redefined error somewhere if they clash.
 */
#define	    UP	    ANTLR3_TOKEN_UP
#define	    DOWN    ANTLR3_TOKEN_DOWN
#define	    EOR	    ANTLR3_TOKEN_EOR
#define	    INVALID ANTLR3_TOKEN_INVALID


/* =============================================================================
 * Functions to create and destroy scopes. First come the rule scopes, followed
 * by the global declared scopes.
 */



/* ============================================================================= */

/* =============================================================================
 * Start of recognizer
 */


/** \brief Table of all token names in symbolic order, mainly used for
 *         error reporting.
 */
pANTLR3_UINT8   STOMPParserTokenNames[22+4]
     = {
        (pANTLR3_UINT8) "<invalid>",       /* String to print to indicate an invalid token */
        (pANTLR3_UINT8) "<EOR>",
        (pANTLR3_UINT8) "<DOWN>",
        (pANTLR3_UINT8) "<UP>",
        (pANTLR3_UINT8) "COLON",
        (pANTLR3_UINT8) "CR",
        (pANTLR3_UINT8) "EOL",
        (pANTLR3_UINT8) "LF",
        (pANTLR3_UINT8) "NULL",
        (pANTLR3_UINT8) "OCTET",
        (pANTLR3_UINT8) "SPECIAL",
        (pANTLR3_UINT8) "'ABORT'",
        (pANTLR3_UINT8) "'ACK'",
        (pANTLR3_UINT8) "'BEGIN'",
        (pANTLR3_UINT8) "'COMMIT'",
        (pANTLR3_UINT8) "'CONNECT'",
        (pANTLR3_UINT8) "'CONNECTED'",
        (pANTLR3_UINT8) "'DISCONNECT'",
        (pANTLR3_UINT8) "'ERROR'",
        (pANTLR3_UINT8) "'MESSAGE'",
        (pANTLR3_UINT8) "'NACK'",
        (pANTLR3_UINT8) "'RECEIPT'",
        (pANTLR3_UINT8) "'SEND'",
        (pANTLR3_UINT8) "'STOMP'",
        (pANTLR3_UINT8) "'SUBSCRIBE'",
        (pANTLR3_UINT8) "'UNSUBSCRIBE'"
       };



// Forward declare the locally static matching functions we have generated.
//
static 
 STOMPParser_frame_stream_return
	frame_stream    (pSTOMPParser ctx);
static 
 void
	frame    (pSTOMPParser ctx);
static 
 void
	command    (pSTOMPParser ctx);
static 
 void
	client_command    (pSTOMPParser ctx);
static 
 void
	server_command    (pSTOMPParser ctx);
static 
 void
	header    (pSTOMPParser ctx);
static 
 void
	header_name    (pSTOMPParser ctx);
static 
 void
	header_value    (pSTOMPParser ctx);
static void	STOMPParserFree(pSTOMPParser ctx);
static void     STOMPParserReset (pSTOMPParser ctx);

/* For use in tree output where we are accumulating rule labels via label += ruleRef
 * we need a function that knows how to free a return scope when the list is destroyed.
 * We cannot just use ANTLR3_FREE because in debug tracking mode, this is a macro.
 */
static	void ANTLR3_CDECL freeScope(void * scope)
{
    ANTLR3_FREE(scope);
}

/** \brief Name of the grammar file that generated this code
 */
static const char fileName[] = "STOMP.g";

/** \brief Return the name of the grammar file that generated this code.
 */
static const char * getGrammarFileName()
{
	return fileName;
}
/** \brief Create a new STOMPParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pSTOMPParser
STOMPParserNew   (pANTLR3_COMMON_TOKEN_STREAM instream)
{
	// See if we can create a new parser with the standard constructor
	//
	return STOMPParserNewSSD(instream, NULL);
}

/** \brief Create a new STOMPParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pSTOMPParser
STOMPParserNewSSD   (pANTLR3_COMMON_TOKEN_STREAM instream, pANTLR3_RECOGNIZER_SHARED_STATE state)
{
    pSTOMPParser ctx;	    /* Context structure we will build and return   */

    ctx	= (pSTOMPParser) ANTLR3_CALLOC(1, sizeof(STOMPParser));

    if	(ctx == NULL)
    {
		// Failed to allocate memory for parser context
		//
        return  NULL;
    }

    /* -------------------------------------------------------------------
     * Memory for basic structure is allocated, now to fill in
     * the base ANTLR3 structures. We initialize the function pointers
     * for the standard ANTLR3 parser function set, but upon return
     * from here, the programmer may set the pointers to provide custom
     * implementations of each function.
     *
     * We don't use the macros defined in STOMPParser.h here, in order that you can get a sense
     * of what goes where.
     */

    /* Create a base parser/recognizer, using the supplied token stream
     */
    ctx->pParser	    = antlr3ParserNewStream(ANTLR3_SIZE_HINT, instream->tstream, state);
    /* Install the implementation of our STOMPParser interface
     */
    ctx->frame_stream	= frame_stream;
    ctx->frame	= frame;
    ctx->command	= command;
    ctx->client_command	= client_command;
    ctx->server_command	= server_command;
    ctx->header	= header;
    ctx->header_name	= header_name;
    ctx->header_value	= header_value;
    ctx->free			= STOMPParserFree;
    ctx->reset			= STOMPParserReset;
    ctx->getGrammarFileName	= getGrammarFileName;

    /* Install the scope pushing methods.
     */

    /* Install the token table
     */
    PSRSTATE->tokenNames   = STOMPParserTokenNames;


    /* Return the newly built parser to the caller
     */
    return  ctx;
}

static void
STOMPParserReset (pSTOMPParser ctx)
{
    RECOGNIZER->reset(RECOGNIZER);
}

/** Free the parser resources
 */
 static void
 STOMPParserFree(pSTOMPParser ctx)
 {
    /* Free any scope memory
     */

	// Free this parser
	//
    ctx->pParser->free(ctx->pParser);


    ANTLR3_FREE(ctx);

    /* Everything is released, so we can return
     */
    return;
 }

/** Return token names used by this 
parser

 *
 * The returned pointer is used as an index into the token names table (using the token
 * number as the index).
 *
 * \return Pointer to first char * in the table.
 */
static pANTLR3_UINT8    *getTokenNames()
{
        return STOMPParserTokenNames;
}


/* Declare the bitsets
 */
/** Bitset defining follow set for error recovery in rule state: FOLLOW_frame_in_frame_stream37  */
static	ANTLR3_BITWORD FOLLOW_frame_in_frame_stream37_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_frame_in_frame_stream37	= { FOLLOW_frame_in_frame_stream37_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_command_in_frame89  */
static	ANTLR3_BITWORD FOLLOW_command_in_frame89_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000040) };
static  ANTLR3_BITSET_LIST FOLLOW_command_in_frame89	= { FOLLOW_command_in_frame89_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_EOL_in_frame91  */
static	ANTLR3_BITWORD FOLLOW_EOL_in_frame91_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000440) };
static  ANTLR3_BITSET_LIST FOLLOW_EOL_in_frame91	= { FOLLOW_EOL_in_frame91_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_header_in_frame112  */
static	ANTLR3_BITWORD FOLLOW_header_in_frame112_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000040) };
static  ANTLR3_BITSET_LIST FOLLOW_header_in_frame112	= { FOLLOW_header_in_frame112_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_EOL_in_frame114  */
static	ANTLR3_BITWORD FOLLOW_EOL_in_frame114_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000440) };
static  ANTLR3_BITSET_LIST FOLLOW_EOL_in_frame114	= { FOLLOW_EOL_in_frame114_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_EOL_in_frame136  */
static	ANTLR3_BITWORD FOLLOW_EOL_in_frame136_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000300) };
static  ANTLR3_BITSET_LIST FOLLOW_EOL_in_frame136	= { FOLLOW_EOL_in_frame136_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_OCTET_in_frame157  */
static	ANTLR3_BITWORD FOLLOW_OCTET_in_frame157_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000300) };
static  ANTLR3_BITSET_LIST FOLLOW_OCTET_in_frame157	= { FOLLOW_OCTET_in_frame157_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_NULL_in_frame179  */
static	ANTLR3_BITWORD FOLLOW_NULL_in_frame179_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000042) };
static  ANTLR3_BITSET_LIST FOLLOW_NULL_in_frame179	= { FOLLOW_NULL_in_frame179_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_EOL_in_frame200  */
static	ANTLR3_BITWORD FOLLOW_EOL_in_frame200_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000042) };
static  ANTLR3_BITSET_LIST FOLLOW_EOL_in_frame200	= { FOLLOW_EOL_in_frame200_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_client_command_in_command234  */
static	ANTLR3_BITWORD FOLLOW_client_command_in_command234_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_client_command_in_command234	= { FOLLOW_client_command_in_command234_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_server_command_in_command255  */
static	ANTLR3_BITWORD FOLLOW_server_command_in_command255_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_server_command_in_command255	= { FOLLOW_server_command_in_command255_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_header_name_in_header608  */
static	ANTLR3_BITWORD FOLLOW_header_name_in_header608_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000010) };
static  ANTLR3_BITSET_LIST FOLLOW_header_name_in_header608	= { FOLLOW_header_name_in_header608_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_COLON_in_header610  */
static	ANTLR3_BITWORD FOLLOW_COLON_in_header610_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000400) };
static  ANTLR3_BITSET_LIST FOLLOW_COLON_in_header610	= { FOLLOW_COLON_in_header610_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_header_value_in_header612  */
static	ANTLR3_BITWORD FOLLOW_header_value_in_header612_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_header_value_in_header612	= { FOLLOW_header_value_in_header612_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_SPECIAL_in_header_name622  */
static	ANTLR3_BITWORD FOLLOW_SPECIAL_in_header_name622_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_SPECIAL_in_header_name622	= { FOLLOW_SPECIAL_in_header_name622_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_header_name_in_header_value633  */
static	ANTLR3_BITWORD FOLLOW_header_name_in_header_value633_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000402) };
static  ANTLR3_BITSET_LIST FOLLOW_header_name_in_header_value633	= { FOLLOW_header_name_in_header_value633_bits, 1	};


/* ==============================================
 * Parsing rules
 */
/**
 * $ANTLR start frame_stream
 * STOMP.g:12:1: frame_stream : ( frame ) ;
 */
static STOMPParser_frame_stream_return
frame_stream(pSTOMPParser ctx)
{
    STOMPParser_frame_stream_return retval;


    /* Initialize rule variables
     */

    retval.start = LT(1); retval.stop = retval.start;


    {
        // STOMP.g:12:16: ( ( frame ) )
        // STOMP.g:12:18: ( frame )
        {
            // STOMP.g:12:18: ( frame )
            // STOMP.g:12:20: frame
            {
                FOLLOWPUSH(FOLLOW_frame_in_frame_stream37);
                frame(ctx);

                FOLLOWPOP();
                if  (HASEXCEPTION())
                {
                    goto ruleframe_streamEx;
                }


            }


            {
                printf("Frame stream `%s'.", STRSTREAM->toStringTT(STRSTREAM, retval.start, LT(-1))
                );
            }


        }

    }

    // This is where rules clean up and exit
    //
    goto ruleframe_streamEx; /* Prevent compiler warnings */
    ruleframe_streamEx: ;
    retval.stop = LT(-1);


            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return retval;
}
/* $ANTLR end frame_stream */

/**
 * $ANTLR start frame
 * STOMP.g:16:1: frame : command EOL ( header EOL )* EOL ( OCTET )* NULL ( EOL )* ;
 */
static void
frame(pSTOMPParser ctx)
{
    /* Initialize rule variables
     */

    {
        // STOMP.g:16:16: ( command EOL ( header EOL )* EOL ( OCTET )* NULL ( EOL )* )
        // STOMP.g:16:18: command EOL ( header EOL )* EOL ( OCTET )* NULL ( EOL )*
        {
            FOLLOWPUSH(FOLLOW_command_in_frame89);
            command(ctx);

            FOLLOWPOP();
            if  (HASEXCEPTION())
            {
                goto ruleframeEx;
            }


             MATCHT(EOL, &FOLLOW_EOL_in_frame91);
            if  (HASEXCEPTION())
            {
                goto ruleframeEx;
            }


            // STOMP.g:17:18: ( header EOL )*

            for (;;)
            {
                int alt1=2;
                switch ( LA(1) )
                {
                case SPECIAL:
                	{
                		alt1=1;
                	}
                    break;

                }

                switch (alt1)
                {
            	case 1:
            	    // STOMP.g:17:20: header EOL
            	    {
            	        FOLLOWPUSH(FOLLOW_header_in_frame112);
            	        header(ctx);

            	        FOLLOWPOP();
            	        if  (HASEXCEPTION())
            	        {
            	            goto ruleframeEx;
            	        }


            	         MATCHT(EOL, &FOLLOW_EOL_in_frame114);
            	        if  (HASEXCEPTION())
            	        {
            	            goto ruleframeEx;
            	        }


            	    }
            	    break;

            	default:
            	    goto loop1;	/* break out of the loop */
            	    break;
                }
            }
            loop1: ; /* Jump out to here if this rule does not match */


             MATCHT(EOL, &FOLLOW_EOL_in_frame136);
            if  (HASEXCEPTION())
            {
                goto ruleframeEx;
            }


            // STOMP.g:19:18: ( OCTET )*

            for (;;)
            {
                int alt2=2;
                switch ( LA(1) )
                {
                case OCTET:
                	{
                		alt2=1;
                	}
                    break;

                }

                switch (alt2)
                {
            	case 1:
            	    // STOMP.g:19:20: OCTET
            	    {
            	         MATCHT(OCTET, &FOLLOW_OCTET_in_frame157);
            	        if  (HASEXCEPTION())
            	        {
            	            goto ruleframeEx;
            	        }


            	    }
            	    break;

            	default:
            	    goto loop2;	/* break out of the loop */
            	    break;
                }
            }
            loop2: ; /* Jump out to here if this rule does not match */


             MATCHT(NULL, &FOLLOW_NULL_in_frame179);
            if  (HASEXCEPTION())
            {
                goto ruleframeEx;
            }


            // STOMP.g:21:18: ( EOL )*

            for (;;)
            {
                int alt3=2;
                switch ( LA(1) )
                {
                case EOL:
                	{
                		alt3=1;
                	}
                    break;

                }

                switch (alt3)
                {
            	case 1:
            	    // STOMP.g:21:20: EOL
            	    {
            	         MATCHT(EOL, &FOLLOW_EOL_in_frame200);
            	        if  (HASEXCEPTION())
            	        {
            	            goto ruleframeEx;
            	        }


            	    }
            	    break;

            	default:
            	    goto loop3;	/* break out of the loop */
            	    break;
                }
            }
            loop3: ; /* Jump out to here if this rule does not match */


        }

    }

    // This is where rules clean up and exit
    //
    goto ruleframeEx; /* Prevent compiler warnings */
    ruleframeEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return ;
}
/* $ANTLR end frame */

/**
 * $ANTLR start command
 * STOMP.g:24:1: command : ( client_command | server_command );
 */
static void
command(pSTOMPParser ctx)
{
    /* Initialize rule variables
     */

    {
        {
            //  STOMP.g:24:16: ( client_command | server_command )

            ANTLR3_UINT32 alt4;

            alt4=2;

            switch ( LA(1) )
            {
            case 11:
            case 12:
            case 13:
            case 14:
            case 15:
            case 17:
            case 20:
            case 22:
            case 23:
            case 24:
            case 25:
            	{
            		alt4=1;
            	}
                break;
            case 16:
            case 18:
            case 19:
            case 21:
            	{
            		alt4=2;
            	}
                break;

            default:
                CONSTRUCTEX();
                EXCEPTION->type         = ANTLR3_NO_VIABLE_ALT_EXCEPTION;
                EXCEPTION->message      = (void *)"";
                EXCEPTION->decisionNum  = 4;
                EXCEPTION->state        = 0;


                goto rulecommandEx;

            }

            switch (alt4)
            {
        	case 1:
        	    // STOMP.g:24:18: client_command
        	    {
        	        FOLLOWPUSH(FOLLOW_client_command_in_command234);
        	        client_command(ctx);

        	        FOLLOWPOP();
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulecommandEx;
        	        }


        	    }
        	    break;
        	case 2:
        	    // STOMP.g:25:20: server_command
        	    {
        	        FOLLOWPUSH(FOLLOW_server_command_in_command255);
        	        server_command(ctx);

        	        FOLLOWPOP();
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulecommandEx;
        	        }


        	    }
        	    break;

            }
        }
    }

    // This is where rules clean up and exit
    //
    goto rulecommandEx; /* Prevent compiler warnings */
    rulecommandEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return ;
}
/* $ANTLR end command */

/**
 * $ANTLR start client_command
 * STOMP.g:28:1: client_command : ( 'SEND' | 'SUBSCRIBE' | 'UNSUBSCRIBE' | 'BEGIN' | 'COMMIT' | 'ABORT' | 'ACK' | 'NACK' | 'DISCONNECT' | 'CONNECT' | 'STOMP' );
 */
static void
client_command(pSTOMPParser ctx)
{
    /* Initialize rule variables
     */

    {
        // STOMP.g:28:16: ( 'SEND' | 'SUBSCRIBE' | 'UNSUBSCRIBE' | 'BEGIN' | 'COMMIT' | 'ABORT' | 'ACK' | 'NACK' | 'DISCONNECT' | 'CONNECT' | 'STOMP' )
        // STOMP.g:
        {
            if ( ((LA(1) >= 11) && (LA(1) <= 15)) || LA(1) == 17 || LA(1) == 20 || ((LA(1) >= 22) && (LA(1) <= 25)) )
            {
                CONSUME();
                PERRORRECOVERY=ANTLR3_FALSE;
            }
            else
            {
                CONSTRUCTEX();
                EXCEPTION->type         = ANTLR3_MISMATCHED_SET_EXCEPTION;
                EXCEPTION->name         = (void *)ANTLR3_MISMATCHED_SET_NAME;
                EXCEPTION->expectingSet = &FOLLOW_set_in_client_command277;

                RECOVERFROMMISMATCHEDSET(&FOLLOW_set_in_client_command277);
                goto ruleclient_commandEx;
            }


        }

    }

    // This is where rules clean up and exit
    //
    goto ruleclient_commandEx; /* Prevent compiler warnings */
    ruleclient_commandEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return ;
}
/* $ANTLR end client_command */

/**
 * $ANTLR start server_command
 * STOMP.g:41:1: server_command : ( 'CONNECTED' | 'MESSAGE' | 'RECEIPT' | 'ERROR' );
 */
static void
server_command(pSTOMPParser ctx)
{
    /* Initialize rule variables
     */

    {
        // STOMP.g:41:16: ( 'CONNECTED' | 'MESSAGE' | 'RECEIPT' | 'ERROR' )
        // STOMP.g:
        {
            if ( LA(1) == 16 || ((LA(1) >= 18) && (LA(1) <= 19)) || LA(1) == 21 )
            {
                CONSUME();
                PERRORRECOVERY=ANTLR3_FALSE;
            }
            else
            {
                CONSTRUCTEX();
                EXCEPTION->type         = ANTLR3_MISMATCHED_SET_EXCEPTION;
                EXCEPTION->name         = (void *)ANTLR3_MISMATCHED_SET_NAME;
                EXCEPTION->expectingSet = &FOLLOW_set_in_server_command511;

                RECOVERFROMMISMATCHEDSET(&FOLLOW_set_in_server_command511);
                goto ruleserver_commandEx;
            }


        }

    }

    // This is where rules clean up and exit
    //
    goto ruleserver_commandEx; /* Prevent compiler warnings */
    ruleserver_commandEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return ;
}
/* $ANTLR end server_command */

/**
 * $ANTLR start header
 * STOMP.g:47:1: header : header_name COLON header_value ;
 */
static void
header(pSTOMPParser ctx)
{
    /* Initialize rule variables
     */

    {
        // STOMP.g:47:16: ( header_name COLON header_value )
        // STOMP.g:47:18: header_name COLON header_value
        {
            FOLLOWPUSH(FOLLOW_header_name_in_header608);
            header_name(ctx);

            FOLLOWPOP();
            if  (HASEXCEPTION())
            {
                goto ruleheaderEx;
            }


             MATCHT(COLON, &FOLLOW_COLON_in_header610);
            if  (HASEXCEPTION())
            {
                goto ruleheaderEx;
            }


            FOLLOWPUSH(FOLLOW_header_value_in_header612);
            header_value(ctx);

            FOLLOWPOP();
            if  (HASEXCEPTION())
            {
                goto ruleheaderEx;
            }


        }

    }

    // This is where rules clean up and exit
    //
    goto ruleheaderEx; /* Prevent compiler warnings */
    ruleheaderEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return ;
}
/* $ANTLR end header */

/**
 * $ANTLR start header_name
 * STOMP.g:48:1: header_name : SPECIAL ;
 */
static void
header_name(pSTOMPParser ctx)
{
    /* Initialize rule variables
     */

    {
        // STOMP.g:48:16: ( SPECIAL )
        // STOMP.g:48:18: SPECIAL
        {
             MATCHT(SPECIAL, &FOLLOW_SPECIAL_in_header_name622);
            if  (HASEXCEPTION())
            {
                goto ruleheader_nameEx;
            }


        }

    }

    // This is where rules clean up and exit
    //
    goto ruleheader_nameEx; /* Prevent compiler warnings */
    ruleheader_nameEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return ;
}
/* $ANTLR end header_name */

/**
 * $ANTLR start header_value
 * STOMP.g:49:1: header_value : ( header_name )* ;
 */
static void
header_value(pSTOMPParser ctx)
{
    /* Initialize rule variables
     */

    {
        // STOMP.g:49:16: ( ( header_name )* )
        // STOMP.g:49:18: ( header_name )*
        {
            // STOMP.g:49:18: ( header_name )*

            for (;;)
            {
                int alt5=2;
                switch ( LA(1) )
                {
                case SPECIAL:
                	{
                		alt5=1;
                	}
                    break;

                }
